@@ -1,3 +1,12 @@
+2003-03-17  Maciej Stachowiak  <mjs@apple.com>
+
+        Reviewed by Trey.
+
+	Adjusted for WebFoundation API changes.
+	
+        * Panels.subproj/WebAuthenticationPanel.m:
+        (-[WebAuthenticationPanel setUpForRequest:]):
+
 2003-03-17  Darin Adler  <darin@apple.com>
 
         * English.lproj/StringsNotToBeLocalized.txt: Update for recent changes.
